[package]
name = "netwatch"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "netwatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.1.1"
toml = "1.0.6"
